Group page initial layout

--- a/hs_core/templates/pages/collaborate.html
+++ b/hs_core/templates/pages/collaborate.html
@@ -6,9 +6,9 @@
         <div class="container">
             <div class="col-sm-12">
                 <div class="collaborate-nav">
-                    <a href="#" class="glyphicon glyphicon-bell collaborate-nav-item active"></a>
-                    <a href="#" class="collaborate-nav-item">My Groups</a>
-                    <a href="#" class="collaborate-nav-item">Find Groups</a>
+                    <a href="/Collaborate" class="glyphicon glyphicon-bell collaborate-nav-item active"></a>
+                    <a href="/my-groups" class="collaborate-nav-item">My Groups</a>
+                    <a href="/find-groups" class="collaborate-nav-item">Find Groups</a>
                 </div>
             </div>
         </div>
