--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -6,9 +6,9 @@
         <div class="container">
             <div class="col-sm-12">
                 <div class="collaborate-nav">
-                    <a href="#my-groups/" class="glyphicon glyphicon-bell collaborate-nav-item"></a>
-                    <a href="#" class="collaborate-nav-item active">My Groups</a>
-                    <a href="#" class="collaborate-nav-item">Find Groups</a>
+                    <a href="/Collaborate" class="glyphicon glyphicon-bell collaborate-nav-item"></a>
+                    <a href="/my-groups" class="collaborate-nav-item active">My Groups</a>
+                    <a href="/find-groups" class="collaborate-nav-item">Find Groups</a>
                 </div>
             </div>
         </div>
@@ -88,8 +88,8 @@
 
                                     <div class="text-center text-muted"><a href="#">21 Members</a></div>
 
-                                    <div class="text-center"><a href="#" class="btn btn-primary" role="button">Invite
-                                        Users</a></div>
+                                    <br>
+                                    <div class="text-center"><a href="#" class="btn btn-primary" role="button">Invite Users</a></div>
                                 </div>
                             </div>
                         </div>
